--- a/assets/style.css
+++ b/assets/style.css
@@ -51,19 +51,23 @@ header {
 }
 
 .zero {
-    height: 150px;
+    height: 120px;
     width: 100%;
     margin-bottom: 20px;
     background-image: url(../images/pexels-jan-kroon-1155019.jpg);
     background-size: cover;
     background-position: center;
-    
 }
+/* relative abd ablosute*/
 
 .zero-header {
-    font-size: 20px;
+    font-size: 25px;
     color: #89280b;
-    background-color: #f7dacd;
+    justify-content: left;
+}
+
+.content {
+    
 }
 
 
