--- a/assets/style.css
+++ b/assets/style.css
@@ -9,10 +9,12 @@ body {
     margin: 0;
 }
 
+::se
+
 a {
     color: #f7dacd;
     text-decoration:underline;
-    justify-content: flex-end;
+    
 }
 
 p {
@@ -23,20 +25,25 @@ header {
     color: #F6EEE0;
     background-color: #A45C40;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 15px;
+    padding: 7px;
     display: flex;
 }
 
+nav 
+
+footer {
+    justify-content: center;
+}
+
 .name {
+    position: relative;
     background-color: #89280b;
-    margin: 0px;
     padding: 0;
-    justify-content: flex-start;
+    margin-left: 0px;
 }
 
 .links {
     font-size: 15px;
-    margin: 0px;
     float: left;
     padding-top: 25px;
 }
@@ -47,13 +54,12 @@ header {
 
 .links ul li {
     display: inline;
-    margin-left: 2px;
 }
 
 .zero {
-    height: 120px;
+    height: 130px;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     background-image: url(../images/pexels-jan-kroon-1155019.jpg);
     background-size: cover;
     background-position: center;
@@ -67,7 +73,100 @@ header {
 }
 
 .content {
+    margin-left: 200px;
+    margin-right: 20px;
+    color:#89280b;
+    border: 10px;
+
+}
+
+.about-me { 
+    margin-bottom: 30px;
+}
+
+.about-me-header {
     
+}
+
+
+
+.work {
+    margin-bottom: 20px;
+    justify-content: space-evenly;
+}
+
+.card1 {
+    justify-content: center;
+}
+
+.card2 {
+    justify-content: flex-end;
+}
+
+.card4 {
+    
+}
+.card5  {
+
+}
+
+.work-1 {
+    border: 5px solid;
+    width: 600px;
+    color: rgb(156, 68, 68);
+}
+
+.work-2 {
+    border: 5px solid;
+    width: 200px;
+    height: 100px;
+    color: rgb(156, 68, 68);
+}
+
+.work-3 {
+    border: 5px solid;
+    width: 200px;
+    height: 100px;
+    color: rgb(156, 68, 68);
+}
+
+.work-4 {
+    border: 5px solid;
+    width: 200px;
+    height: 100px;
+    color: rgb(156, 68, 68);
+}
+
+.work-5 {
+    border: 5px solid;
+    width: 200px;
+    height: 100px;
+    color: rgb(156, 68, 68);
+}
+
+.work-1:hover,
+.work-2:hover,
+.work-3:hover,
+.work-4:hover,
+.work-5:hover{
+    color: #907a71;
+}
+
+.header1 {
+    font-size: 15px;
+}
+
+.subheader2 {
+    font-size: 8px;
+}
+
+.contact {
+    display: inline;
+    font-size: 15px;
+}
+
+.contact-header {
+    font-family: 'Courier New', Courier, monospace;
 }
 
 
