--- a/assets/style.css
+++ b/assets/style.css
@@ -10,11 +10,6 @@ body {
     margin: 0px;
 }
 
-a {
-    color: #5c2107;
-    text-decoration:underline;  
-}
-
 p {
     font-size: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -163,7 +158,6 @@ h3, h4 {
 
 .contact-C {
     margin: 40px;
-    display: inline;
     text-decoration: underline;
     width: 80%;
 }
@@ -172,11 +166,20 @@ h3, h4 {
     color: #5f2812;
     font-style: italic;
     display: inline;
+    
+
 
 }
 .contact-header {
     font-family: 'Courier New', Courier, monospace;
     width: 20%;
+}
+
+.contact-1 {
+    border: 2px solid;
+    width: 300px;
+    height: 150px;
+    color: rgb(78, 74, 74);
 }
 
 @media screen and (max-with:792px) {
